# otto

./: .gitignore  prepare_data.sh  pyproject.toml
code/: __init__.py  example.py
code/fusion/: run.sh
code/ranker/: run.sh
code/recall/convisitation/: main.py  run.sh
code/recall/nn/: run.sh
code/submit/: conv_only.py  run.sh
code/utils/: __init__.py  logger.py  paths.py  timer.py
code/validation/: main.py  run.sh
codes/recall/: eval.py  fuse.py
codes/recall/convisitation/: cov.ipynb  cov.py  run.sh
codes/recall/nn/: nn.py
codes/utils/: __init__.py  logger.py
experiments/: ENV_USAGE.md  README.md  baseline.env  convis_base.env  convis_v12.env  convis_v15.env  convis_v18.env  no_nn.env
scripts/: clean_experiment.sh  common.sh  prepare_data.sh  run_submit.sh  run_train.sh  run_validation.sh
